# mirror

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  agenda.py  app.py  autostart  cache.py  config.py  configure.py  connectivity.py  database.py  database_test.py  docker-build.sh  docker-run.sh  log.py  mail.py  messages.py  mirrorapp.py  mypy.ini  plugin_context.py  plugin_context_test.py  plugin_discovery.py  pre_commit_npm.py  pylintrc  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.in  requirements.txt  scroff.sh  scron.sh  startup.sh  tasks.py  weather.py  worth.py
.github/workflows/: docker-build.yaml
backend/src/mirror/: diagnostics.py  event_bus.py  log.py  mail.py  main.py  main_config.py  messages.py  oauth.py  paths.py  plugin_configure_context.py  plugin_context.py  plugin_context_test.py  plugin_discovery.py  plugin_manager.py  rotator.py
backend/src/mirror/plugins/activity/: __init__.py  fitbit.py
backend/src/mirror/plugins/air_quality/: __init__.py
backend/src/mirror/plugins/calendar/: common.py
backend/src/mirror/plugins/calendars/: __init__.py  agenda.py  calendar.py  calendars.py  coming_up.html  coming_up.py  common.py  configure.py  countdown.py  datetime_utils.py  google_calendar.py
backend/src/mirror/plugins/connectivity/: __init__.py
backend/src/mirror/plugins/mail/: __init__.py  mail.html
backend/src/mirror/plugins/menu/: __init__.py
backend/src/mirror/plugins/now_playing/: __init__.py  now_playing.html
backend/src/mirror/plugins/positivity/: positivity.html
backend/src/mirror/plugins/weather/: __init__.py
backend/src/mirror/plugins/word_ptbr/: __init__.py
backend/src/mirror/plugins/worth/: __init__.py  common.py  configure.py  worth.py  worth_test.py
backend/static/: main.css
backend/static/js/: main.js  mirror-events.riot
backend/static/ltw2017/: data.json
backend/static/ltw2018/: data.json
backend/static/tag/: clock.tag
backend/templates/: 52stories.html  email.html  hh2020.html  index-base.html  index.html  light_the_world.html  macros.html  rotator.html
conf/: uvicorn.logger.json
docs/: deployment-testing.md
frontend/: package-lock.json  package.json
frontend/public/: global.css  index.html
frontend/src/: Activity.svelte  Agenda.svelte  AirQuality.svelte  App.svelte  Calendar.svelte  Clock.svelte  ComingUp.svelte  Compliment.svelte  Connectivity.svelte  Countdown.svelte  Events.svelte  LightTheWorld.svelte  Mail.svelte  Menu.svelte  NowPlaying.svelte  Positivity.svelte  Rotator.svelte  RotatorPanel.svelte  Weather.svelte  Word.svelte  Worth.svelte
pages/: index.html
plugins/calendar/: __init__.py  agenda.py  calendar.py  comingup.py  common.py  configure.py  countdown.py  datetimeutils.py  google_calendar.py
plugins/calendar/static/: agenda.tag  comingup.tag  countdown.tag
plugins/connectivity/: __init__.py
plugins/connectivity/static/: connectivity.tag
plugins/sample/: __init__.py  configure.py  sample.py
plugins/sample/static/: sample.tag
plugins/weather/: __init__.py
plugins/weather/static/: weather.tag
plugins/worth/: __init__.py  common.py  worth.py  worth_test.py
plugins/worth/static/: worth.tag
src/mirror/: config_tui.py  config_tui.tcss  config_utils.py  diagnostics.py  errors.py  event_bus.py  layout.py  log.py  main.py  main_config.py  oauth.py  paths.py  plugin.py  plugin_configure_context.py  plugin_context.py  plugin_discovery.py  plugin_manager.py  rotator.py
src/mirror/plugins/activity/: __init__.py  activity-settings.html  activity.html  fitbit.py  settings.py
src/mirror/plugins/activity/static/: activity.css  (+1 more)
src/mirror/plugins/air_quality/: __init__.py  air_quality.html
src/mirror/plugins/calendar/: __init__.py  agenda.py  calendar.py  common.py  configure.py  countdown.py  datetime_utils.py  google_calendar.py
src/mirror/plugins/calendars/: __init__.py  agenda.html  agenda.py  calendars.py  coming_up.html  coming_up.py  common.py  configure.py  countdown.html  countdown.py  datetime_utils.py  google_calendar.py
src/mirror/plugins/clock/: __init__.py  clock.html
src/mirror/plugins/connectivity/: __init__.py  connectivity.html
src/mirror/plugins/joke/: __init__.py  joke.html
src/mirror/plugins/mail/: __init__.py
src/mirror/plugins/now_playing/: __init__.py  now_playing.html
src/mirror/plugins/positivity/: positivity.html
src/mirror/plugins/sleep/: __init__.py
src/mirror/plugins/weather/: __init__.py  weather.html
src/mirror/plugins/word_ptbr/: __init__.py  word_ptbr.html
src/mirror/plugins/worth/: __init__.py  worth.py
static/: cursor-hide.js  fonts.css  index.html  main.css  settings.css  sse.js
static/52stories/: data.json
static/css/: main.css
static/fonts/montserrat/: montserrat.css
static/fonts/roboto/: roboto.css
static/hh2020/: data.json
static/js/: main.js  numline.js  rotate_advent.js
static/ltw2017/: data.json
static/tag/: agenda.tag  clock.tag  coming_up.tag  connectivity.tag  countdown.tag  countup.tag  weather.tag  worth.tag
system/: autostart  check-offline.sh  config.sh  crontab.txt  install.sh  mirror-server.service  run.sh  scroff.sh  scron.sh  sudo-crontab.txt
system/install/: autostart  autoupdate.service  autoupdate.sh  autoupdate.timer  browser.desktop  browser.service  browser.sh  mirror-server.service  reboot.service  reboot.timer  screenoff.service  screenoff.sh  screenoff.timer  screenon.service  screenon.sh  screenon.timer
templates/: 52stories.html  base.html  blank.html  email.html  index-base.html  index.html  light_the_world.html  ltw2017.html  ltw2018.html  oauth-success.html  rotate_advent.html  rotate_sail.html  rotate_tasks.html  rotate_temple.html  rotator.html  settings-base.html  settings.html
tests/mirror/: plugin_context_test.py
tests/mirror/doubles/: plugin_context.py
tests/mirror/plugins/calendar/: agenda_test.py
tests/mirrortests/: plugin_context_test.py
tests/mirrortests/doubles/: plugin_context.py
tests/mirrortests/plugins/calendars/: agenda_test.py  coming_up_test.py  common.py  conftest.py
(+9 files in other folders)
