[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Eric Smith", email = "eric@esmithy.net"},
]
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "starlette>=0.14.1",
    "uvicorn>=0.12.2",
    "gunicorn>=20.0.4",
    "sse-starlette>=0.6.1",
    "aiofiles>=0.6.0",
    "sqlitedict>=1.7.0",
    "cryptography>=3.3.1",
    "httpx>=0.23.0",
    "aiogoogle>=2.1.0",
    "google-auth-oauthlib>=0.4.2",
    "personalcapital>=1.0.1",
    "IMAPClient>=2.2.0",
    "Authlib>=0.15.5",
    "aiohttp>=3.8.1",
]
name = "mirror"
version = "3.0.0"
description = "A life dashboard application for Raspberry Pi"

[project.scripts]
mirror = "mirror.main:main"
mirror-config = "mirror.main_config:main"
pre-commit-npm = "pre_commit_npm:main"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-asyncio<1.0.0,>=0.14.0",
]

[tool.pdm.build]
includes = ["backend/src/"]
package-dir = "backend/src/"
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.black]
exclude = '''
(
  /(  # Exclude directories:
      \.eggs
    | .+\.egg-info
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | \frontend
    | _build
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.messages_control]
# Coming soon.
# https://docs.pylint.org/en/latest/whatsnew/2.5.html
disable = """
bad-continuation,attribute-defined-outside-init,W0511,R0902,R0913,W0622,C0116,C0103,
R0903,W0631,W0212,W0603,R1710,R0201
"""
j = '0'

